ingress/examples/www.chenliujin.com-admin/www.chenliujin.com-admin.service.yml
apiVersion: v1
kind: Service
metadata:
  name: chenliujin-admin
spec:
  selector:
    app: chenliujin-admin
  ports:
  - port: 80 
    targetPort: 80
